--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --cor-de-fundo: #c41212ce;
     --fundo-senha: #801313;
     --fundo-texto: #400000;
-    --borda: #0075FF;
+    --borda: #680202;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
